--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-h1 {
-    color: aqua;
+header {
+    color: gray;
     text-align: center;
-    font-family: 'Times New Roman', Times, serif;
+    font-size: 120px;
 }
