--- a/style.css
+++ b/style.css
@@ -1,5 +1,77 @@
-header {
-    color: gray;
-    text-align: center;
-    font-size: 120px;
+/* HTML */
+html {
+    background-color: blanchedalmond;
 }
+
+/* Main styling */
+#container {
+    display: flex;
+    padding-bottom: 70px;
+}
+
+#container p {
+    margin-left:30px;
+}
+
+
+
+
+/* Padding */
+
+
+
+/* Nav bar */
+#navbar {  
+    color:  rgb(235, 148, 18);
+    overflow: hidden;
+    
+}
+
+#navbar a {
+    float:none
+}
+
+#navbar ul li a {
+    display: block;
+    text-align: center;
+    padding: 10px;
+    color:rgb(235, 148, 18)
+    
+}
+
+#navbar ul {
+    list-style: none;
+
+}
+
+.ball {
+    color:rgb(235, 148, 18);
+    text-align: center;
+    
+}
+
+
+/* Pictures*/
+
+.james{
+    display: block;
+    margin-left: auto;
+    margin-right:;
+    width: 40%;
+    padding-bottom: 45px;
+}
+/* Footer */
+#main-footer {
+    padding: 50px;
+    color: rgb(235, 148, 18);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    background-color: rgb(99, 92, 82);
+}
+
+
+
+
+
+
+
