--- a/style.css
+++ b/style.css
@@ -6,12 +6,11 @@ html {
 /* Main styling */
 #container {
     display: flex;
-    padding-bottom: 70px;
+    padding-bottom: 70px
+    
 }
 
-#container p {
-    margin-left:30px;
-}
+
 .container {
     background-color:  rgb(99, 92, 82); 
     border-radius: 50%;
@@ -96,16 +95,22 @@ span {
 #container {
  
     align-items: center;
+   
+
    }
 
 #container img {
     max-height: 100%;
     max-width: 200px;
+    margin: auto;
+    
     
 }
 .c1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
+    padding: 20px;
+    
 }
 
 .text {
@@ -124,10 +129,11 @@ span {
     font-size: 15px;
     color: #fff;
     background: #333;
-    padding: 10px;
+    padding: 5px;
     border: none;
     cursor: pointer;
     text-align: center;
+    
 }
 
 .text-2 {
@@ -135,7 +141,10 @@ span {
     
 }
 
-
+/* Btn styling */
+.text-2 {
+  background-image: url();
+}
 
 
 /* Footer */
@@ -144,8 +153,8 @@ span {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     background-color: rgb(99, 92, 82);
-    
     text-align: center;
+    
 
 
 
