--- a/style.css
+++ b/style.css
@@ -6,22 +6,18 @@ html {
 /* Main styling */
 #container {
     display: flex;
-    padding-bottom: 70px
+    padding-bottom: 70px;
+    align-items: center;
     
 }
 
 
 .container {
     background-color:  rgb(99, 92, 82); 
-    border-radius: 50%;
-    
-    
+   
 }
 
 
-
-
-/* Padding */
 
 
 
@@ -88,28 +84,27 @@ a:link {
 
 /* About p */
 
+.welcome {
+text-align: center;
+}
+
 span {
     font-size: 30px;
 }
 
-#container {
- 
-    align-items: center;
-   
-
-   }
 
 #container img {
     max-height: 100%;
     max-width: 200px;
-    margin: auto;
-    
-    
+      
+   
 }
+
 .c1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     padding: 20px;
+    background-color: white;
     
 }
 
@@ -124,15 +119,13 @@ span {
     
 }
 
-.btn {
-    display: inline-block;
-    font-size: 15px;
-    color: #fff;
-    background: #333;
-    padding: 5px;
-    border: none;
-    cursor: pointer;
+
+.block { 
+
+    font-size: 16px;
     text-align: center;
+    cursor: grab;
+
     
 }
 
@@ -143,8 +136,60 @@ span {
 
 /* Btn styling */
 .text-2 {
-  background-image: url();
+  
 }
+
+/* Biographies */
+.clear {
+    border-bottom-style:dotted;
+    padding-bottom:1px;
+    padding-top: 1px;
+}
+
+#container-2 {
+    padding-top: 25px;
+    display: grid;
+    align-items: center; 
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 30px;
+    
+    
+    
+    
+}
+
+#container-2 img {
+
+    max-height: 100%;
+    max-width: 200px;
+    float: none;
+    
+
+}
+
+.bio {
+    font-size: 25px;
+  
+    
+}
+
+
+#container-3 h1 {
+
+    margin: auto;
+    font-size: 20px;
+
+}
+#container-3 {
+
+    align-items:end;
+}
+    
+
+
+
+    
+
 
 
 /* Footer */
