--- a/style.css
+++ b/style.css
@@ -1,11 +1,63 @@
 /* HTML */
 html {
-    background-color: blanchedalmond;
+    
+    background: linear-gradient(132deg, rgb(255, 0, 0) 0.00%, rgb(255, 213, 0) 100.00%);
+
+}
+
+/* New header */
+
+.header {
+    overflow: hidden;
+    padding: 20px 10px;
+
+}
+
+.header a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+}
+
+.header a.logo {
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.header a:hover {
+    background-color: #ddd;
+    color:black;
+}
+
+.header a.active {
+    background-color: orangered;
+    color: black;
+}
+
+.header-right {
+    float: right;
+}
+
+@media screen and (max-width: 500px) {
+    .header a {
+        float: none;
+        display:block;
+        text-align: left;
+    }
+
+    .header-right {
+        float: none;
+    }
 }
 
 /* Main styling */
 #container {
-    display: flex;
+    
     padding-bottom: 70px;
     align-items: center;
     
@@ -17,60 +69,6 @@ html {
    
 }
 
-
-
-
-
-/* Nav bar */
-#navbar {  
-    color:  rgb(235, 148, 18);
-    overflow: hidden;
-    
-}
-
-#navbar a {
-    float:none
-}
-
-#navbar ul li a {
-    display: block;
-    text-align: center;
-    padding: 10px;
-    color:rgb(235, 148, 18);
-    font-size: 20px;
-    
-}
-
-#navbar ul {
-    list-style: none;
-
-}
-
-.ball {
-    color:rgb(235, 148, 18);
-    text-align: center;
-    
-    
-}
-
-.ball a {
-    color:rgb(235, 148, 18);
-    padding: 70px 0px;
-    
-}
-
-a:link {
-    text-decoration: none;
-  }
-  a:visited {
-    text-decoration: none;
-  }
-  a:hover {
-    text-decoration: underline;
-  }
-  a:active {
-    text-decoration: underline;
-  }
 
 
 /* Pictures*/
@@ -96,6 +94,9 @@ span {
 #container img {
     max-height: 100%;
     max-width: 200px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 40px;
       
    
 }
@@ -109,13 +110,6 @@ span {
 }
 
 .text {
-    display:block;
-    float: left;
-    position: absolute;
-    text-align: center;
-    font-size: 15px;
-    line-height: 14px;
-    padding-top: 350px;
     
 }
 
@@ -204,7 +198,6 @@ span {
     
 
 }
-
 
 
 
