--- a/style.css
+++ b/style.css
@@ -122,27 +122,29 @@ span {
     font-size: 30px;
 }
 
-#container img {
+.container-about img {
     max-height: 100%;
     max-width: 200px;
     margin-right: auto;
     margin-left: auto;
     padding-top: 40px;
     
+    
 }
 
 
 
 .c1 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     padding: 20px;
     background-color: white;
     
 }
 
-.text {
-   font-weight:;
+.text-2 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+   
     
 }
 
@@ -170,23 +172,31 @@ span {
     padding-top: 1px;
 }
 
-#container-2 {
+.container-2 {
     padding-top: 25px;
     display: grid;
     align-items: center; 
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 35px;
+   
+}
+
+.container-2 h1 {
+    text-align: center;
+}
     
+
+
+.container-yt {
+
+    
+    
+    margin-left:  250px;
+
+
 }
 
-#container-yt {
-
-    margin: 0;
-
-
-}
-
-#container-2 img {
+.container-2 img {
 
     max-height: 10%;
     max-width: 275px;
@@ -194,13 +204,6 @@ span {
 
 }
 
-.bio {
-    font-size: 24px;
-    padding-right: 75px;
-    padding-top: 75px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
-}
 
 .img-text h1 {
 
@@ -210,16 +213,20 @@ span {
 }
 
 .img-text {
-    border: 1px white solid;
     margin-right: auto;
 }
-
-
-
 
 .img-text a {
     cursor:cursor;
     color: rgb(156, 235, 9);
+    
+}
+.container-yt  p {
+    text-align: center;
+}
+
+.bio-page {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     
 }
 
@@ -238,13 +245,14 @@ span {
     margin-left: auto;
     margin-right: auto;
     display: flex;
+    
 }
 
-.fame-info, .fame-info2 , h3{
+.fame-info, .fame-info2  {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
-    margin-right: 400px;
-    margin-left: 400px;
+    
+    
     
     
 }
@@ -253,12 +261,19 @@ span {
     
     margin-left: 400px;
     margin-right: 400px;
+   
+    
 }
 
 .fame h1 {
     font-size: 50px;
     color: rgb(255, 208, 0);
 
+}
+
+.container-fame{
+
+    
 }
 
 
@@ -275,6 +290,7 @@ span {
     background-color: orangered;
     color: white;
     text-align: center;
+    
     
 
 }
